Update messages and snapshots

--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -6726,14 +6726,14 @@
   "src_dot_siteSettings_dot_components_dot_SiteSettingsDetails_dot_1008586926": {
     "string": "Name of your store is shown on tab in web browser"
   },
-  "src_dot_siteSettings_dot_components_dot_SiteSettingsDetails_dot_1987367127": {
-    "string": "Store Description"
+  "src_dot_siteSettings_dot_components_dot_SiteSettingsDetails_dot_1170194728": {
+    "string": "Store domain"
   },
   "src_dot_siteSettings_dot_components_dot_SiteSettingsDetails_dot_2286355060": {
     "string": "Name of your store"
   },
-  "src_dot_siteSettings_dot_components_dot_SiteSettingsDetails_dot_3808773492": {
-    "string": "URL of your online store"
+  "src_dot_siteSettings_dot_components_dot_SiteSettingsDetails_dot_3868874271": {
+    "string": "Store description"
   },
   "src_dot_siteSettings_dot_components_dot_SiteSettingsDetails_dot_529433178": {
     "string": "Store description is shown on taskbar after your store name"
