--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3655,6 +3655,14 @@
     "context": "total price of ordered products",
     "string": "Total"
   },
+  "src_dot_orders_dot_components_dot_OrderDraftDetailsProducts_dot_productDeleted": {
+    "context": "deleted product info in an unconfirmed order",
+    "string": "This product variant no longer exists"
+  },
+  "src_dot_orders_dot_components_dot_OrderDraftDetailsSummary_dot_addCustomerInfo": {
+    "context": "add customer first label",
+    "string": "add customer first"
+  },
   "src_dot_orders_dot_components_dot_OrderDraftDetailsSummary_dot_addDiscount": {
     "context": "add discount button",
     "string": "Add Discount"
