--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -1833,13 +1833,6 @@
   "src_dot_components_dot_AddressEdit_dot_944851093": {
     "string": "Country area"
   },
-  "src_dot_components_dot_AppStatus_dot_1624959454": {
-    "string": "If you want to disable this App please uncheck the box below."
-  },
-  "src_dot_components_dot_AppStatus_dot_1750277107": {
-    "context": "section header",
-    "string": "App Status"
-  },
   "src_dot_components_dot_AssignAttributeDialog_dot_2173976534": {
     "context": "button",
     "string": "Assign attributes"
@@ -6634,6 +6627,13 @@
   "src_dot_staff_dot_components_dot_StaffProperties_dot_457748370": {
     "context": "button",
     "string": "Delete photo"
+  },
+  "src_dot_staff_dot_components_dot_UserStatus_dot_2478471710": {
+    "context": "section header",
+    "string": "User Status"
+  },
+  "src_dot_staff_dot_components_dot_UserStatus_dot_677167463": {
+    "string": "If you want to disable this User please uncheck the box below."
   },
   "src_dot_staff_dot_views_dot_1308770978": {
     "context": "dialog header",
