--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -4458,10 +4458,6 @@
     "context": "section header",
     "string": "Fulfilled ({quantity})"
   },
-  "src_dot_orders_dot_components_dot_OrderReturnPage_dot_OrderReturnRefundItemsCard_dot_improperValue": {
-    "context": "error message",
-    "string": "Improper value"
-  },
   "src_dot_orders_dot_components_dot_OrderReturnPage_dot_OrderReturnRefundItemsCard_dot_refunded": {
     "context": "refunded fulfillment, section header",
     "string": "Refunded ({quantity})"
@@ -4482,14 +4478,6 @@
     "context": "product no longer exists error title",
     "string": "Product no longer exists"
   },
-  "src_dot_orders_dot_components_dot_OrderReturnPage_dot_OrderReturnRefundItemsCard_dot_titleFulfilled": {
-    "context": "section header",
-    "string": "Fulfillment - #{fulfilmentId}"
-  },
-  "src_dot_orders_dot_components_dot_OrderReturnPage_dot_OrderReturnRefundItemsCard_dot_titleUnfulfilled": {
-    "context": "section header",
-    "string": "Unfulfilled Items"
-  },
   "src_dot_orders_dot_components_dot_OrderReturnPage_dot_OrderReturnRefundItemsCard_dot_unfulfilled": {
     "context": "section header",
     "string": "Unfulfilled"
@@ -4498,9 +4486,25 @@
     "context": "page header with order number",
     "string": "Order #{orderNumber}"
   },
+  "src_dot_orders_dot_components_dot_OrderReturnPage_dot_deletedVariant": {
+    "context": "status badge description on deleted variants",
+    "string": "This product is no longer in the database. It won’t be restocked."
+  },
+  "src_dot_orders_dot_components_dot_OrderReturnPage_dot_improperValue": {
+    "context": "error message",
+    "string": "Improper value"
+  },
   "src_dot_orders_dot_components_dot_OrderReturnPage_dot_pageTitle": {
     "context": "page header",
     "string": "Order no. {orderNumber} - Replace/Return"
+  },
+  "src_dot_orders_dot_components_dot_OrderReturnPage_dot_titleFulfilled": {
+    "context": "section header",
+    "string": "Fulfillment - #{fulfilmentId}"
+  },
+  "src_dot_orders_dot_components_dot_OrderReturnPage_dot_titleUnfulfilled": {
+    "context": "section header",
+    "string": "Unfulfilled Items"
   },
   "src_dot_orders_dot_components_dot_OrderSettingsPage_dot_1149215359": {
     "context": "header",
