Apply suggestions from code review
Co-authored-by: Jakub Majorek <majorek.jakub@gmail.com>

--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -4504,7 +4504,7 @@
   },
   "src_dot_orders_dot_components_dot_OrderReturnPage_dot_titleUnfulfilled": {
     "context": "section header",
-    "string": "Unfulfilled Items"
+    "string": "Unfulfilled items"
   },
   "src_dot_orders_dot_components_dot_OrderSettingsPage_dot_1149215359": {
     "context": "header",
