--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -6368,7 +6368,7 @@
   },
   "src_dot_products_dot_components_dot_ProductVariantEndPreorderDialog_dot_dialogTitle": {
     "context": "dialog header",
-    "string": "Ending Preorder"
+    "string": "Ending preorder"
   },
   "src_dot_products_dot_components_dot_ProductVariantImageSelectDialog_dot_2015102342": {
     "context": "dialog header",
