--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -496,22 +496,6 @@
     "context": "number of variants",
     "string": "Variants ({quantity})"
   },
-  "saleDetailsUnassignCategory": {
-    "context": "unassign category from sale, button",
-    "string": "Unassign"
-  },
-  "saleDetailsUnassignCollection": {
-    "context": "unassign collection from sale, button",
-    "string": "Unassign"
-  },
-  "saleDetailsUnassignProduct": {
-    "context": "unassign product from sale, button",
-    "string": "Unassign"
-  },
-  "saleDetailsUnassignVaraint": {
-    "context": "unassign variant from sale, button",
-    "string": "Unassign"
-  },
   "set availability date": {
     "context": "product availability date label",
     "string": "Set availability date"
@@ -1881,56 +1865,60 @@
     "context": "placeholder",
     "string": "Search by value name, etc..."
   },
-  "src_dot_components_dot_AssignCategoryDialog_dot_3125506097": {
+  "src_dot_components_dot_AssignCategoryDialog_dot_assignCategoryDialogHeader": {
     "context": "dialog header",
     "string": "Assign Category"
   },
-  "src_dot_components_dot_AssignCategoryDialog_dot_3690273268": {
-    "string": "Search by category name, etc..."
-  },
-  "src_dot_components_dot_AssignCategoryDialog_dot_3841025483": {
+  "src_dot_components_dot_AssignCategoryDialog_dot_assignCategoryDialogLabel": {
+    "context": "dialog header",
     "string": "Search Category"
   },
-  "src_dot_components_dot_AssignCollectionDialog_dot_2605414502": {
-    "string": "Search by collection name, etc..."
+  "src_dot_components_dot_AssignCategoryDialog_dot_assignCategoryDialogPlaceholder": {
+    "context": "dialog search placeholder",
+    "string": "Search by category name, etc..."
   },
-  "src_dot_components_dot_AssignCollectionDialog_dot_3992923611": {
+  "src_dot_components_dot_AssignCollectionDialog_dot_assignCollectionDialogHeader": {
     "context": "dialog header",
     "string": "Assign Collection"
   },
-  "src_dot_components_dot_AssignCollectionDialog_dot_4057224233": {
+  "src_dot_components_dot_AssignCollectionDialog_dot_assignCollectionDialogLabel": {
+    "context": "dialog header",
     "string": "Search Collection"
   },
-  "src_dot_components_dot_AssignContainerDialog_dot_1731102929": {
+  "src_dot_components_dot_AssignCollectionDialog_dot_assignCollectionDialogPlaceholder": {
+    "context": "dialog search placeholder",
+    "string": "Search by collection name, etc..."
+  },
+  "src_dot_components_dot_AssignContainerDialog_dot_assignContainerDialogButton": {
     "context": "button",
     "string": "Assign"
   },
-  "src_dot_components_dot_AssignProductDialog_dot_2100305525": {
+  "src_dot_components_dot_AssignProductDialog_dot_assignProductDialogButton": {
     "context": "button",
     "string": "Assign products"
   },
-  "src_dot_components_dot_AssignProductDialog_dot_2336947364": {
-    "string": "Search by product name, attribute, product type etc..."
-  },
-  "src_dot_components_dot_AssignProductDialog_dot_2850255786": {
+  "src_dot_components_dot_AssignProductDialog_dot_assignProductDialogContent": {
     "string": "Search Products"
   },
-  "src_dot_components_dot_AssignProductDialog_dot_649693468": {
+  "src_dot_components_dot_AssignProductDialog_dot_assignProductDialogSearch": {
+    "string": "Search by product name, attribute, product type etc..."
+  },
+  "src_dot_components_dot_AssignProductDialog_dot_assignVariantDialogHeader": {
     "context": "dialog header",
     "string": "Assign Product"
   },
-  "src_dot_components_dot_AssignVariantDialog_dot_1180121133": {
+  "src_dot_components_dot_AssignVariantDialog_dot_assignVariantDialogButton": {
     "context": "button",
     "string": "Assign variants"
   },
-  "src_dot_components_dot_AssignVariantDialog_dot_3111608667": {
+  "src_dot_components_dot_AssignVariantDialog_dot_assignVariantDialogContent": {
     "string": "Search Variants"
   },
-  "src_dot_components_dot_AssignVariantDialog_dot_3986131972": {
+  "src_dot_components_dot_AssignVariantDialog_dot_assignVariantDialogHeader": {
     "context": "dialog header",
     "string": "Assign Variant"
   },
-  "src_dot_components_dot_AssignVariantDialog_dot_59669419": {
+  "src_dot_components_dot_AssignVariantDialog_dot_assignVariantDialogSearch": {
     "string": "Search by variant name, attribute, variant type etc..."
   },
   "src_dot_components_dot_AttributeUnassignDialog_dot_2037985699": {
@@ -2829,41 +2817,45 @@
   "src_dot_discounts": {
     "string": "Discounts"
   },
-  "src_dot_discounts_dot_components_dot_DiscountCategories_dot_1567318211": {
-    "string": "Category name"
+  "src_dot_discounts_dot_components_dot_DiscountCategories_dot_discountCategoriesButton": {
+    "context": "button",
+    "string": "Assign category"
   },
-  "src_dot_discounts_dot_components_dot_DiscountCategories_dot_1681512341": {
+  "src_dot_discounts_dot_components_dot_DiscountCategories_dot_discountCategoriesHeader": {
     "context": "section header",
     "string": "Eligible Categories"
   },
-  "src_dot_discounts_dot_components_dot_DiscountCategories_dot_2054128296": {
+  "src_dot_discounts_dot_components_dot_DiscountCategories_dot_discountCategoriesNotFound": {
+    "context": "no categories",
     "string": "No categories found"
   },
-  "src_dot_discounts_dot_components_dot_DiscountCategories_dot_2968663655": {
+  "src_dot_discounts_dot_components_dot_DiscountCategories_dot_discountCategoriesTableProductHeader": {
+    "context": "table head",
+    "string": "Category Name"
+  },
+  "src_dot_discounts_dot_components_dot_DiscountCategories_dot_discountCategoriesTableProductNumber": {
     "context": "number of products",
     "string": "Products"
   },
-  "src_dot_discounts_dot_components_dot_DiscountCategories_dot_3973677075": {
+  "src_dot_discounts_dot_components_dot_DiscountCollections_dot_discountCollectionsButton": {
     "context": "button",
-    "string": "Assign categories"
+    "string": "Assign collection"
   },
-  "src_dot_discounts_dot_components_dot_DiscountCollections_dot_1035511604": {
-    "context": "button",
-    "string": "Assign collections"
-  },
-  "src_dot_discounts_dot_components_dot_DiscountCollections_dot_2137803833": {
-    "string": "No collections found"
-  },
-  "src_dot_discounts_dot_components_dot_DiscountCollections_dot_2968663655": {
-    "context": "number of products",
-    "string": "Products"
-  },
-  "src_dot_discounts_dot_components_dot_DiscountCollections_dot_3011396316": {
-    "string": "Collection name"
-  },
-  "src_dot_discounts_dot_components_dot_DiscountCollections_dot_452750900": {
+  "src_dot_discounts_dot_components_dot_DiscountCollections_dot_discountCollectionsHeader": {
     "context": "section header",
     "string": "Eligible Collections"
+  },
+  "src_dot_discounts_dot_components_dot_DiscountCollections_dot_discountCollectionsNotFound": {
+    "context": "no collections",
+    "string": "No collections found"
+  },
+  "src_dot_discounts_dot_components_dot_DiscountCollections_dot_discountCollectionsTableProductHeader": {
+    "context": "table head",
+    "string": "Collection Name"
+  },
+  "src_dot_discounts_dot_components_dot_DiscountCollections_dot_discountCollectionsTableProductNumber": {
+    "context": "number of products",
+    "string": "Products"
   },
   "src_dot_discounts_dot_components_dot_DiscountCountrySelectDialog_dot_1585396479": {
     "context": "dialog header",
@@ -2896,45 +2888,52 @@
     "context": "time during discount is active, header",
     "string": "Active Dates"
   },
-  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_1657559629": {
-    "string": "No products found"
-  },
-  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_2100305525": {
+  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_discountProductsButton": {
     "context": "button",
     "string": "Assign products"
   },
-  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_2697405188": {
-    "string": "Product Name"
-  },
-  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_3326160357": {
-    "context": "product availability",
-    "string": "Availability"
-  },
-  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_4257289053": {
-    "string": "Product Type"
-  },
-  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_919175218": {
+  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_discountProductsHeader": {
     "context": "section header",
     "string": "Eligible Products"
   },
-  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_1180121133": {
+  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_discountProductsNotFound": {
+    "context": "no products",
+    "string": "No products found"
+  },
+  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_discountProductsTableAvailabilityHeader": {
+    "context": "product availability",
+    "string": "Availability"
+  },
+  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_discountProductsTableProductHeader": {
+    "context": "table head",
+    "string": "Product Name"
+  },
+  "src_dot_discounts_dot_components_dot_DiscountProducts_dot_discountProductsTableTypeHeader": {
+    "context": "product type",
+    "string": "Product Type"
+  },
+  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_discountVariantsButton": {
     "context": "button",
     "string": "Assign variants"
   },
-  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_2633407446": {
+  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_discountVariantsHeader": {
     "context": "section header",
     "string": "Eligible Variants"
   },
-  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_2697405188": {
-    "string": "Product Name"
-  },
-  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_4257289053": {
-    "string": "Product Type"
-  },
-  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_908482263": {
+  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_discountVariantsNotFound": {
+    "context": "no variants",
     "string": "No variants found"
   },
-  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_953327101": {
+  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_discountVariantsTableProductHeader": {
+    "context": "table head",
+    "string": "Product Name"
+  },
+  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_discountVariantsTableTypeHeader": {
+    "context": "table head",
+    "string": "Product Type"
+  },
+  "src_dot_discounts_dot_components_dot_DiscountVariants_dot_discountVariantsTableVariantHeader": {
+    "context": "table head",
     "string": "Variant Name"
   },
   "src_dot_discounts_dot_components_dot_SaleCreatePage_dot_3866518732": {
@@ -3302,51 +3301,73 @@
   "src_dot_discounts_dot_views_dot_SaleCreate_dot_480188715": {
     "string": "Manage Sales Channel Availability"
   },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_1457489953": {
-    "context": "dialog content",
-    "string": "Are you sure you want to delete {saleName}?"
-  },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_1827854264": {
-    "context": "dialog header",
-    "string": "Unassign Categories From Sale"
-  },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_1952217501": {
-    "context": "dialog header",
-    "string": "Unassign Collections From Sale"
-  },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_2353723060": {
-    "context": "dialog content",
-    "string": "{counter,plural,one{Are you sure you want to unassign this category?} other{Are you sure you want to unassign {displayQuantity} categories?}}"
-  },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_2534378844": {
-    "string": "Removed sale"
-  },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_2544297248": {
-    "context": "dialog header",
-    "string": "Unassign Variants From Sale"
-  },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_3215481647": {
-    "context": "dialog content",
-    "string": "{counter,plural,one{Are you sure you want to unassign this product?} other{Are you sure you want to unassign {displayQuantity} products?}}"
-  },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_3395246518": {
-    "context": "dialog header",
-    "string": "Unassign Products From Sale"
-  },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_3823295269": {
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsChannelAvailabilityDialogHeader": {
+    "context": "channel availability dialog header",
     "string": "Manage Channel Availability"
   },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_385470907": {
-    "context": "dialog content",
-    "string": "{counter,plural,one{Are you sure you want to unassign this variant?} other{Are you sure you want to unassign {displayQuantity} variants?}}"
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsSaleDelate": {
+    "context": "sale Details delete button",
+    "string": "Removed sale"
   },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_506030254": {
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsSaleDeleteDialog": {
+    "context": "dialog content",
+    "string": "Removed sale"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsSaleDeleteDialogHeader": {
     "context": "dialog header",
     "string": "Delete Sale"
   },
-  "src_dot_discounts_dot_views_dot_SaleDetails_dot_767268203": {
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignCategory": {
+    "context": "unassign category from sale, button",
+    "string": "Unassign"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignCategoryDialog": {
     "context": "dialog content",
-    "string": "{counter,plural,one{Are you sure you want to unassign this collection?} other{Are you sure you want to unassign {displayQuantity} collections?}}"
+    "string": "{counter,plural,one{Are you sure you want to unassign this category?} other{Are you sure you want to unassign {displayQuantity} categories?}}"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignCategoryDialogHeader": {
+    "context": "dialog header",
+    "string": "Unassign Categories From Sale"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignCollection": {
+    "context": "unassign collection from sale, button",
+    "string": "Unassign"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignCollectionDialog": {
+    "context": "dialog content",
+    "string": "{counter,plural,one{Are you sure you want to unassign this collection?} other{Are you sure you want to unassign {displayQuantity} categories?}}"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignCollectionDialogHeader": {
+    "context": "dialog header",
+    "string": "Unassign Collection From Sale"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignDialogDelete": {
+    "context": "dialog content",
+    "string": "Are you sure you want to delete {saleName}?"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignProduct": {
+    "context": "unassign product from sale, button",
+    "string": "Unassign"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignProductDialog": {
+    "context": "dialog content",
+    "string": "{counter,plural,one{Are you sure you want to unassign this product?} other{Are you sure you want to unassign {displayQuantity} categories?}}"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignProductDialogHeader": {
+    "context": "dialog header",
+    "string": "Unassign Product From Sale"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignVariant": {
+    "context": "unassign variant from sale, button",
+    "string": "Unassign"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignVariantDialog": {
+    "context": "dialog content",
+    "string": "{counter,plural,one{Are you sure you want to unassign this variant?} other{Are you sure you want to unassign {displayQuantity} categories?}}"
+  },
+  "src_dot_discounts_dot_views_dot_SaleDetails_dot_saleDetailsUnassignVariantDialogHeader": {
+    "context": "dialog header",
+    "string": "Unassign Variant From Sale"
   },
   "src_dot_discounts_dot_views_dot_SaleList_dot_2809303671": {
     "context": "dialog header",
